--- a/docs/astrofd.tex
+++ b/docs/astrofd.tex
@@ -1,88 +1,88 @@
-\\documentclass[11pt]{article}
-\\usepackage{geometry}
-\\usepackage{amsmath}
-\\usepackage{amssymb}
-\\usepackage{hyperref}
-\\geometry{margin=1in}
+\documentclass[11pt]{article}
+\usepackage{geometry}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{hyperref}
+\geometry{margin=1in}
 
-\\title{AstroFD: Relativistic Jet and SN-lite Solver}
-\\author{AstroFD Contributors}
-\\date{\\today}
+\title{AstroFD: Relativistic Jet and SN-lite Solver}
+\author{AstroFD Contributors}
+\date{\today}
 
-\\begin{document}
-\\maketitle
+\begin{document}
+\maketitle
 
-\\begin{abstract}
+\begin{abstract}
 AstroFD is a finite-volume solver for relativistic hydrodynamics and magnetohydrodynamics,
 with optional fixed-background GR, jet nozzle injection, and SN-lite physics. This document
 summarizes the governing equations, numerical methods, and implemented capabilities.
-\\end{abstract}
+\end{abstract}
 
-\\section{Governing Equations}
-\\subsection{Special Relativistic Hydrodynamics}
-We evolve conservative variables $U = (D, S_i, \\tau)$ derived from primitives
-$(\\rho, v_i, p)$ with an ideal-gas EOS. The fluxes use standard SRHD forms
-\\cite{marti1999, mignone2007}.
+\section{Governing Equations}
+\subsection{Special Relativistic Hydrodynamics}
+We evolve conservative variables $U = (D, S_i, \tau)$ derived from primitives
+$(\rho, v_i, p)$ with an ideal-gas EOS. The fluxes use standard SRHD forms
+\cite{marti1999, mignone2007}.
 
-\\subsection{Special Relativistic MHD}
-RMHD extends SRHD with magnetic fields $\\mathbf{B}$ and GLM divergence cleaning
-\\cite{dedner2002, mignone2010}. We include a GLM scalar $\\psi$ with hyperbolic
+\subsection{Special Relativistic MHD}
+RMHD extends SRHD with magnetic fields $\mathbf{B}$ and GLM divergence cleaning
+\cite{dedner2002, mignone2010}. We include a GLM scalar $\psi$ with hyperbolic
 cleaning speed $c_h$ and damping $c_p$.
 
-\\subsection{GRHD/GRMHD on Fixed Backgrounds}
+\subsection{GRHD/GRMHD on Fixed Backgrounds}
 We implement the Valencia formulation on fixed metrics (Minkowski, Schwarzschild,
 Kerr-Schild) with optional orthonormal-frame flux evaluation
-\\cite{font2008, gammie2003}.
+\cite{font2008, gammie2003}.
 
-\\subsection{Causal Dissipation}
+\subsection{Causal Dissipation}
 Israel--Stewart-type causal dissipation evolves bulk, shear, and heat flux variables
-with relaxation-time IMEX updates \\cite{israel1979, rezolla2013}.
+with relaxation-time IMEX updates \cite{israel1979, rezolla2013}.
 
-\\subsection{SN-lite Source Terms}
+\subsection{SN-lite Source Terms}
 SN-lite physics includes Newtonian gravity, gain-region heating/cooling, and an optional
 lightbulb neutrino heating/cooling source term. These are parametric models intended for
 controlled experiments rather than full radiation-hydrodynamic transport.
 
-\\section{Numerical Methods}
-\\subsection{Discretization}
+\section{Numerical Methods}
+\subsection{Discretization}
 Finite-volume conservative updates with ghost zones on Cartesian grids.
 Reconstruction options include MUSCL, PPM, and WENO5. Slope limiters include
-MC, minmod, and van Leer \\cite{toro1999}.
+MC, minmod, and van Leer \cite{toro1999}.
 
-\\subsection{Riemann Solvers}
+\subsection{Riemann Solvers}
 HLLE provides a robust baseline. HLLC is available for hydro, and HLLD for RMHD
-\\cite{toro1999, miyoshi2005}.
+\cite{toro1999, miyoshi2005}.
 
-\\subsection{Time Integration}
+\subsection{Time Integration}
 SSPRK2 and SSPRK3 are supported. Dissipation source terms use subcycled IMEX updates
 with adaptive subcycling to handle stiff relaxation.
 
-\\section{Boundary and Injection}
+\section{Boundary and Injection}
 Jet nozzle inflow is imposed at the left x-boundary with top-hat, taper, or parabolic
 profiles and optional perturbations. Magnetic fields at the nozzle can be poloidal
 or toroidal.
 
-\\section{Diagnostics and Validation}
+\section{Diagnostics and Validation}
 Diagnostics include maximum Lorentz factor, inlet energy flux, divB statistics,
 SN shock radius, gain mass, cocoon pressure, and mixing layer thickness. Validation
 suites are included for schemes, GR metrics, restart, and SN-lite scenarios.
 
-\\section{Capabilities Summary}
-\\begin{itemize}
-  \\item SRHD, RMHD, GRHD, GRMHD solvers with GLM divergence cleaning.
-  \\item Causal dissipation, two-temperature relaxation, resistive and non-ideal MHD.
-  \\item H/He nonequilibrium ion chemistry.
-  \\item SN-lite gravity, heating/cooling, and lightbulb neutrino source terms.
-  \\item PPM and WENO5 reconstruction; SSPRK3 time integration.
-  \\item HLLC (hydro) and HLLD (RMHD) solvers.
-\\end{itemize}
+\section{Capabilities Summary}
+\begin{itemize}
+  \item SRHD, RMHD, GRHD, GRMHD solvers with GLM divergence cleaning.
+  \item Causal dissipation, two-temperature relaxation, resistive and non-ideal MHD.
+  \item H/He nonequilibrium ion chemistry.
+  \item SN-lite gravity, heating/cooling, and lightbulb neutrino source terms.
+  \item PPM and WENO5 reconstruction; SSPRK3 time integration.
+  \item HLLC (hydro) and HLLD (RMHD) solvers.
+\end{itemize}
 
-\\section{Limitations and Future Work}
+\section{Limitations and Future Work}
 Current limitations include static nested refinement (single rank), solver-side GPU
 acceleration, and incomplete validation suites for high-order accuracy and GRMHD
 benchmarks.
 
-\\bibliographystyle{unsrt}
-\\bibliography{astrofd_refs}
+\bibliographystyle{unsrt}
+\bibliography{astrofd_refs}
 
-\\end{document}
+\end{document}
