--- a/docs/astrofd_refs.bib
+++ b/docs/astrofd_refs.bib
@@ -52,6 +52,15 @@
   number={7}
 }
 
+@article{banyuls1997,
+  title={Numerical {3+1} general relativistic hydrodynamics: A local characteristic approach},
+  author={Banyuls, F. and Font, J. A. and Ibanez, J. M. and Marti, J. M. and Miralles, J. A.},
+  journal={Astrophysical Journal},
+  year={1997},
+  volume={476},
+  pages={221--231}
+}
+
 @book{toro1999,
   title={Riemann Solvers and Numerical Methods for Fluid Dynamics},
   author={Toro, E. F.},
@@ -68,6 +77,33 @@
   pages={315--344}
 }
 
+@article{colella1984,
+  title={The Piecewise Parabolic Method (PPM) for gas-dynamical simulations},
+  author={Colella, P. and Woodward, P. R.},
+  journal={Journal of Computational Physics},
+  year={1984},
+  volume={54},
+  pages={174--201}
+}
+
+@article{jiang1996,
+  title={Efficient implementation of weighted ENO schemes},
+  author={Jiang, G.-S. and Shu, C.-W.},
+  journal={Journal of Computational Physics},
+  year={1996},
+  volume={126},
+  pages={202--228}
+}
+
+@article{gottlieb2001,
+  title={Strong stability-preserving Runge-Kutta and multistep time discretizations},
+  author={Gottlieb, S. and Shu, C.-W. and Tadmor, E.},
+  journal={SIAM Review},
+  year={2001},
+  volume={43},
+  pages={89--112}
+}
+
 @article{israel1979,
   title={Transient relativistic thermodynamics and kinetic theory},
   author={Israel, W. and Stewart, J. M.},
@@ -82,4 +118,13 @@
   author={Rezzolla, L. and Zanotti, O.},
   year={2013},
   publisher={Oxford University Press}
+}
+
+@article{janka2001,
+  title={Conditions for neutrino-driven explosions of massive stars},
+  author={Janka, H.-T.},
+  journal={Astronomy and Astrophysics},
+  year={2001},
+  volume={368},
+  pages={527--560}
 }
