--- a/docs/astrofd_refs.bib
+++ b/docs/astrofd_refs.bib
@@ -7,6 +7,22 @@
   number={3}
 }
 
+@book{anile1989,
+  title={Relativistic Fluids and Magneto-fluids},
+  author={Anile, A. M.},
+  year={1989},
+  publisher={Cambridge University Press}
+}
+
+@article{komissarov1999,
+  title={A Godunov-type scheme for relativistic magnetohydrodynamics},
+  author={Komissarov, S. S.},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  year={1999},
+  volume={303},
+  pages={343--366}
+}
+
 @article{mignone2007,
   title={PLUTO: A Numerical Code for Computational Astrophysics},
   author={Mignone, A. and others},
@@ -41,6 +57,15 @@
   year={2003},
   volume={589},
   pages={444--457}
+}
+
+@article{delzanna2007,
+  title={ECHO: a Eulerian Conservative High Order scheme for general relativistic magnetohydrodynamics},
+  author={Del Zanna, L. and Bucciantini, N. and Londrillo, P.},
+  journal={Astronomy and Astrophysics},
+  year={2007},
+  volume={473},
+  pages={11--30}
 }
 
 @article{font2008,
@@ -127,4 +152,40 @@
   year={2001},
   volume={368},
   pages={527--560}
+}
+
+@article{janka2012,
+  title={Explosion mechanisms of core-collapse supernovae},
+  author={Janka, H.-T.},
+  journal={Annual Review of Nuclear and Particle Science},
+  year={2012},
+  volume={62},
+  pages={407--451}
+}
+
+@article{palenzuela2009,
+  title={Beyond ideal MHD: towards a relativistic resistive MHD code},
+  author={Palenzuela, C. and others},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  year={2009},
+  volume={394},
+  pages={1727--1740}
+}
+
+@article{anninos1997,
+  title={Cosmological hydrodynamics with multigroup radiation},
+  author={Anninos, P. and Zhang, Y. and Abel, T. and Norman, M. L.},
+  journal={New Astronomy},
+  year={1997},
+  volume={2},
+  pages={209--224}
+}
+
+@article{noble2006,
+  title={Primitive variable solvers for conservative general relativistic magnetohydrodynamics},
+  author={Noble, S. C. and Gammie, C. F. and McKinney, J. C. and Del Zanna, L.},
+  journal={Astrophysical Journal},
+  year={2006},
+  volume={641},
+  pages={626--637}
 }
